--- a/detail.css
+++ b/detail.css
@@ -7,37 +7,58 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
-nav a {
-  text-decoration: none;
-  color: #b8becd;
+header,
+footer,
+.content {
+  width: 100%;
+  padding: 2vmax 5vmax;
 }
 
-nav a.icon-home {
-  font-size: 0px;
+p {
+  margin: 0;
 }
 
-nav a.icon-home:hover {
-  font-size: 0px;
+/* header */
+header {
+  background-color: #fff;
+}
+
+.hide-text {
+  font-size: 0;
+}
+
+.icon-home {
+  margin-bottom: auto;
+}
+
+.icon-home:hover {
   opacity: 0.7;
 }
 
-nav a:hover {
-  color: #000;
+.logo {
+  content: url("./assets/logo.svg");
+  height: 3rem;
 }
 
-nav a.active {
-  color: #000;
+.right {
+  display: flex;
+  gap: 0.5rem;
 }
 
-nav ul .email {
-  position: relative;
-  top: -5px;
+div.navbar-collapse {
+  flex-grow: initial;
 }
 
-.prof {
-  position: relative;
-  top: -10px;
-  margin-right: -20px;
+li.nav-item {
+  text-align: end;
+  margin: auto 0;
+}
+
+.button-email-profile {
+  padding-left: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .icon-email {
@@ -46,34 +67,49 @@ nav ul .email {
 }
 
 .icon-profile {
-    width: 3rem;
-    height: 3rem;
-    object-fit: cover;
-    border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
-h1 {
-  font-family: "Playfair Display", sans-serif;
+/* content */
+.vehicle {
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 2vmax;
+}
+
+/* carousel */
+#carousel-thumb {
+  height: calc(100vw - 15vmax);
+}
+
+.sr-only {
+  font-size: 0px;
+}
+
+/* detail */
+h1,
+h2 {
   font-weight: 700;
 }
 
-h2 {
+h1,
+.location {
   font-family: "Playfair Display", sans-serif;
-  font-weight: 400;
 }
 
-.main-photo {
-  width: 90%;
+h1 {
+  font-size: 2.5rem;
 }
 
-img {
-  border-radius: 10px;
+h2 {
+  font-size: 1.5rem;
 }
 
-.small-photo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.location {
+  margin-bottom: 2rem;
 }
 
 .availability {
@@ -86,6 +122,11 @@ img {
   font-weight: 300;
   font-size: 1.5rem;
   color: #9b0a0a;
+  margin-bottom: 2rem;
+}
+
+p.info {
+  margin-bottom: 0.5rem;
 }
 
 .price {
@@ -93,6 +134,7 @@ img {
   font-weight: 700;
   font-size: 2.25rem;
   text-align: end;
+  margin-bottom: 2rem;
 }
 
 .count {
@@ -111,48 +153,70 @@ button.count-button {
 }
 
 .action {
+  margin-top: 2vmax;
   display: flex;
   justify-content: space-between;
 }
 
-.button {
+.action-button {
+  width: 30%;
   height: 90px;
   font-weight: 700;
-  font-size: 1.5rem;
   border-radius: 10px;
 }
 
-.button2 {
-  width: 35%;
-}
-
-.button1 {
-  width: 20%;
+button.icon-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .icon-like {
   content: url("./assets/like.png");
-  height: 1.25rem;
+  height: 1.5rem;
 }
 
-/* Footer */
+/* footer */
 footer {
   background-color: #f9f9fb;
   color: #393939;
+  font-family: "Mulish", sans-serif;
+  font-weight: 300;
 }
 
 .grid-footer {
   display: grid;
-  padding: 70px 90px 0px;
-  font-family: "Mulish", sans-serif;
-  font-weight: 300;
-  color: #393939;
+  grid-template-areas:
+    "a"
+    "b"
+    "c"
+    "d";
+  grid-gap: 1rem;
+}
+
+.grid-footer .intro {
+  grid-area: a;
+}
+
+.grid-footer .destinations {
+  grid-area: b;
+}
+
+.grid-footer .vehicles {
+  grid-area: c;
+}
+
+.grid-footer .interests {
+  grid-area: d;
 }
 
 .grid-footer .footer-title {
   font-weight: 700;
-  color: #393939;
-  margin-bottom: 1em;
+}
+
+.grid-footer p {
+  margin-bottom: 0.5rem;
 }
 
 .grid-footer a {
@@ -165,21 +229,16 @@ footer {
   opacity: 0.7;
 }
 
-.logo {
-  content: url("./assets/logo.svg");
-  height: 45px;
-}
-
 hr.line {
   color: #c4c4c4;
   width: 85%;
-  margin: 10px auto;
+  margin: 1rem auto;
 }
 
 .social {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 20px 0px 25px;
 }
 
 .social a {
@@ -187,13 +246,9 @@ hr.line {
   color: #393939;
 }
 
-.icon-google {
-  content: url("./assets/icon-google.png");
-  height: 1em;
-}
-
 .icon {
-  margin: 15px;
+  height: 1.5rem;
+  margin: 1rem;
 }
 
 .icon:hover {
@@ -214,138 +269,69 @@ hr.line {
 .icon-youtube {
   content: url("./assets/icon-youtube.svg");
 }
-/* Footer */
 
-@media (max-width: 600px) {
-  nav {
-    padding: 1.5rem 2rem 0px;
-    width: 100vw;
-    height: 10vh;
+@media (min-width: 576px) {
+  /* header */
+  .navbar-nav {
+    flex-direction: row-reverse !important;
   }
 
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: -50px;
+  .nav-menu {
+    display: flex;
   }
 
-  nav ul li {
-    float: right;
-    padding: 1rem;
+  .expanded-right {
+    display: flex !important;
+    flex-direction: row-reverse;
   }
 
-  nav li.optional {
-    display: none;
+  /* content */
+  .vehicle {
+    display: grid;
+    grid-template-columns: 50% auto;
+    grid-gap: 2vmax;
   }
 
-  .content {
-    padding: 1.5rem 2rem;
+  /* carousel */
+  #carousel-thumb {
+    height: calc(50vw - 10vmax);
   }
 
-  h1 {
-    font-size: 2em;
-  }
-
-  h2 {
-    font-size: 1.5rem;
-  }
-
+  /* footer */
   .grid-footer {
-    grid-template-columns: auto;
-  }
-}
-
-@media (min-width: 600px) and (max-width: 768px) {
-  nav {
-    padding: 5rem 6rem 0px;
-    width: 100vw;
-    height: 20vh;
-  }
-
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: -50px;
-  }
-
-  nav ul li {
-    float: right;
-    padding: 1rem;
-  }
-
-  nav li.optional {
-    display: none;
-  }
-
-  .content {
-    padding: 5rem 6rem;
-  }
-
-  h1 {
-    font-size: 4em;
-  }
-
-  h2 {
-    font-size: 2.5rem;
-  }
-
-  .page {
-    font-weight: 700;
-    font-size: 2.25rem;
-  }
-
-  .grid-footer {
-    grid-template-columns: auto auto;
+    grid-template-areas:
+      "a a a"
+      "b c d";
+    justify-content: space-between;
   }
 }
 
 @media (min-width: 768px) {
-  nav {
-    padding: 5rem 6rem 0px;
-    width: 100vw;
-    height: 20vh;
-  }
-
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: -50px;
-  }
-
-  nav ul li {
-    float: right;
-    padding: 1rem;
-  }
-
-  .content {
-    padding: 5rem 6rem;
-  }
-
-  .vehicle {
-    display: grid;
-    grid-template-columns: 50% 50%;
-  }
-
+  /* content */
   h1 {
-    font-size: 4em;
+    font-size: 3.5rem;
   }
 
   h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
-  .page {
-    font-weight: 700;
-    font-size: 2.25rem;
+  .action-button {
+    font-size: 1.25rem;
   }
 
+  /* footer */
   .grid-footer {
-    grid-template-columns: auto auto auto auto;
+    grid-template-areas:
+      "a b"
+      "c d";
+    justify-content: initial;
+  }
+}
+
+@media (min-width: 992px) {
+  /* footer */
+  .grid-footer {
+    grid-template-areas: "a b c d";
   }
 }
