--- a/home.css
+++ b/home.css
@@ -24,8 +24,12 @@ header {
   background-color: #fff;
 }
 
-.icon-home {
+.hide-text {
   font-size: 0;
+}
+
+.icon-home {
+  margin-bottom: auto;
 }
 
 .icon-home:hover {
@@ -34,7 +38,12 @@ header {
 
 .logo {
   content: url("./assets/logo.svg");
-  height: 45px;
+  height: 3rem;
+}
+
+.right {
+  display: flex;
+  gap: 0.5rem;
 }
 
 div.navbar-collapse {
@@ -47,8 +56,10 @@ li.nav-item {
 }
 
 .button-login-register {
-  padding: 0.5rem 0;
-  text-align: end;
+  padding-left: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 /* finder */
@@ -76,7 +87,7 @@ h1 {
 
 h2 {
   font-size: 1.5rem;
-  margin-bottom: 1.5 rem;
+  margin-bottom: 1.5rem;
 }
 
 hr.finder-line {
@@ -334,9 +345,14 @@ hr.line {
     display: flex;
   }
 
-  .button-login-register {
-    padding-left: 0.5rem;
+  .expanded-right {
+    display: flex !important;
+    flex-direction: row-reverse;
   }
+
+  /* .button-login-register {
+    padding-left: 0.5rem;
+  } */
 
   /* finder */
   .finder-content {
