--- a/login.css
+++ b/login.css
@@ -4,114 +4,135 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
+  font-family: "Nunito", sans-serif;
 }
 
-.grid-main {
+h1 {
+  font-family: "Playfair Display", sans-serif;
+  font-weight: 700;
+  font-size: calc(2rem + 2vw);
+}
+
+p {
+  margin: 0;
+}
+
+/* main */
+.main {
   height: 100vh;
   background-image: linear-gradient(#00000066 100%, #fff 0%),
     url("./assets/jeep-bromo.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  display: grid;
-  grid-template-columns: 50vw 50vw;
+  color: #fff;
 }
 
-header h1 {
-  font-family: "Playfair Display", sans-serif;
-  font-weight: 700;
-  font-size: 4em;
+.main a {
+  color: #fff;
+  /* text-decoration: none; */
 }
 
-.header {
+.left-section,
+.right-section {
+  padding: 15%;
   display: flex;
   flex-direction: column;
-  margin: auto 0px;
-  color: #fff;
-  font-family: "Nunito", sans-serif;
+  gap: 1.5rem;
   font-weight: 700;
-  margin-left: 15%;
 }
 
-.form-custom,
-.form-custom:focus {
+.fixed-width {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+}
+
+button.fixed-width {
+  width: 100%;
+  font-weight: 900;
+}
+
+.left-section {
+  padding-top: 5vmax;
+  margin: auto 0px;
+}
+
+.register1 {
+  display: none;
+}
+
+.right-section {
+  justify-content: center;
+}
+
+.custom-form,
+.custom-form:focus {
+  padding-left: 0.5rem;
   background-color: #ffffff40;
   border: 0px;
   color: #fff;
-  display: block;
-}
-
-.form-custom::placeholder {
-  color: #fff;
-}
-
-button.width450 {
-  font-weight: 900;
   border-radius: 10px;
 }
 
-.header .width450 {
-  width: 80%;
-}
-
-header h1 {
-  margin-bottom: 40px;
-}
-
-input {
-  border-radius: 10px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  margin: auto 10%;
-}
-
-.form a {
+.custom-form::placeholder {
+  padding-left: 0.5rem;
   color: #fff;
-  text-decoration: none;
-  font-family: "Mulish", sans-serif;
-  font-weight: 700;
-}
-
-.width450 {
-  width: 100%;
-  height: 80px;
-  font-family: "Nunito", sans-serif;
-  font-size: 1.5em;
 }
 
 .icon-google {
   content: url("./assets/icon-google.png");
-  height: 2rem;
-  margin-right: 0.5rem;
+  height: 1.5rem;
 }
 
 button.icon-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 0.5rem;
 }
 
-/* Footer */
+/* footer */
 footer {
+  padding: 2vmax 5vmax;
   background-color: #f9f9fb;
   color: #393939;
+  font-family: "Mulish", sans-serif;
+  font-weight: 300;
 }
 
 .grid-footer {
   display: grid;
-  padding: 70px 90px 0px;
-  font-family: "Mulish", sans-serif;
-  font-weight: 300;
-  color: #393939;
+  grid-template-areas:
+    "a"
+    "b"
+    "c"
+    "d";
+  grid-gap: 1rem;
+}
+
+.grid-footer .intro {
+  grid-area: a;
+}
+
+.grid-footer .destinations {
+  grid-area: b;
+}
+
+.grid-footer .vehicles {
+  grid-area: c;
+}
+
+.grid-footer .interests {
+  grid-area: d;
 }
 
 .grid-footer .footer-title {
   font-weight: 700;
-  color: #393939;
-  margin-bottom: 1em;
+}
+
+.grid-footer p {
+  margin-bottom: 0.5rem;
 }
 
 .grid-footer a {
@@ -124,21 +145,16 @@ footer {
   opacity: 0.7;
 }
 
-.logo {
-  content: url("./assets/logo.svg");
-  height: 45px;
-}
-
 hr.line {
   color: #c4c4c4;
   width: 85%;
-  margin: 10px auto;
+  margin: 1rem auto;
 }
 
 .social {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 20px 0px 25px;
 }
 
 .social a {
@@ -147,7 +163,13 @@ hr.line {
 }
 
 .icon {
-  margin: 15px;
+  height: 1.5rem;
+  margin: 1rem;
+}
+
+.logo {
+  content: url("./assets/logo.svg");
+  height: 45px;
 }
 
 .icon:hover {
@@ -168,57 +190,54 @@ hr.line {
 .icon-youtube {
   content: url("./assets/icon-youtube.svg");
 }
-/* Footer */
 
-@media (max-width: 600px) {
-  .grid-main {
-    grid-template-columns: 100vw;
+@media (min-width: 576px) {
+  /* main */
+  .main {
+    display: grid;
+    grid-template-columns: 50vw 50vw;
   }
 
-  header h1 {
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
-
-  .signup {
-    display: none;
-  }
-
-  .width450 {
-    width: 100%;
-    height: 50px;
-    font-family: "Nunito", sans-serif;
-  }
-
-  .grid-footer {
-    grid-template-columns: auto;
-  }
-
-  .destinations,
-  .vehicles,
-  .interests {
-    display: none;
-  }
-}
-
-@media (min-width: 600px) and (max-width: 768px) {
-  .header {
+  .left-section {
     border-right: 1px solid #fff;
     height: 75vh;
   }
 
+  .register1 {
+    display: initial;
+  }
+
+  .register2 {
+    display: none;
+  }
+
+  /* footer */
   .grid-footer {
-    grid-template-columns: auto auto;
+    grid-template-areas:
+      "a a a"
+      "b c d";
+    justify-content: space-between;
   }
 }
 
 @media (min-width: 768px) {
-  .header {
-    border-right: 1px solid #fff;
-    height: 75vh;
+  /* main */
+  .fixed-width {
+    font-size: 1.25rem;
   }
 
+  /* footer */
   .grid-footer {
-    grid-template-columns: auto auto auto auto;
+    grid-template-areas:
+      "a b"
+      "c d";
+    justify-content: initial;
+  }
+}
+
+@media (min-width: 992px) {
+  /* footer */
+  .grid-footer {
+    grid-template-areas: "a b c d";
   }
 }
