--- a/home.css
+++ b/home.css
@@ -41,11 +41,6 @@ header {
   height: 3rem;
 }
 
-.right {
-  display: flex;
-  gap: 0.5rem;
-}
-
 div.navbar-collapse {
   flex-grow: initial;
 }
@@ -55,9 +50,16 @@ li.nav-item {
   margin: auto 0;
 }
 
+hr.line-nav {
+  color: #c4c4c4;
+  width: 100%;
+  margin: 0.5rem 0 1rem;
+}
+
 .button-login-register {
   padding-left: 0.5rem;
   display: flex;
+  justify-content: end;
   align-items: center;
   gap: 1rem;
 }
@@ -131,18 +133,19 @@ hr.finder-line {
 }
 
 /* content (popular & testimony)*/
-.popular-title {
+.section-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 2rem;
 }
 
-.popular-title a {
+.section-title a {
   text-decoration: none;
   color: #fb8f1d;
 }
 
-.popular-title a:hover {
+.section-title a:hover {
   opacity: 0.7;
 }
 
@@ -276,6 +279,10 @@ footer {
   grid-area: d;
 }
 
+br.break {
+  display: none;
+}
+
 .grid-footer .footer-title {
   font-weight: 700;
 }
@@ -337,9 +344,8 @@ hr.line {
 
 @media (min-width: 576px) {
   /* header */
-  .expanded-right {
-    display: flex !important;
-    flex-direction: row-reverse;
+  hr.line-nav {
+    display: none;
   }
 
   /* finder */
@@ -400,7 +406,7 @@ hr.line {
 
   h2 {
     font-size: 2rem;
-    margin-bottom: 2rem;
+    margin: 0;
   }
 
   /* popular & testimony */
@@ -417,12 +423,6 @@ hr.line {
   }
 
   /* footer */
-  .grid-footer {
-    grid-template-areas:
-      "a b"
-      "c d";
-    justify-content: initial;
-  }
 }
 
 @media (min-width: 992px) {
@@ -439,5 +439,10 @@ hr.line {
   /* footer */
   .grid-footer {
     grid-template-areas: "a b c d";
+    justify-content: initial;
+  }
+
+  br.break {
+    display: initial;
   }
 }
